@@ -13,7 +13,7 @@ public class DiapasonFuncTest {
     public void whenLinearFunctionThenLinearResults() {
         DiapasonFunc function = new DiapasonFunc();
         List<Double> result = function.diapason(5, 8, x -> 2 * x + 1);
-        List<Double> expected = Arrays.asList(11D, 13D, 15D);
+        List<Double> expected = List.of(11D, 13D, 15D);
         assertThat(result, is(expected));
     }
 
@@ -21,7 +21,7 @@ public class DiapasonFuncTest {
     public void whenQuadraticFunctionThenQuadraticResult() {
         DiapasonFunc function = new DiapasonFunc();
         List<Double> result = function.diapason(5, 8, x -> 2 * x * x + 3 * x + 4);
-        List<Double> expected = Arrays.asList(69D, 94D, 123D);
+        List<Double> expected = List.of(69D, 94D, 123D);
         assertThat(result, is(expected));
     }
 
@@ -29,7 +29,7 @@ public class DiapasonFuncTest {
     public void whenExponentialFunctionThenExponentialResult() {
         DiapasonFunc function = new DiapasonFunc();
         List<Double> result = function.diapason(5, 8, x -> Math.pow(2, x));
-        List<Double> expected = Arrays.asList(32D, 64D, 128D);
+        List<Double> expected = List.of(32D, 64D, 128D);
         assertThat(result, is(expected));
     }
 
